Layout fixes for mobile
Fixes to table widths on mobile: we wrap tables in a dummy element (necessary due to CSS limitations: `overflow` is broken on tables), and constrain wrapped tables' widths to 150vw while setting `width: max-content` (necessary so that wrapped tables won't word-wrap columns to minimum widths based on their headers).

We disable mobile text autosizing on our math markup, to compensate for browsers just completely exploding when trying to autosize text. Yes, I hate that I have to do this.

--- a/_sass/common-visual.scss
+++ b/_sass/common-visual.scss
@@ -192,6 +192,15 @@ table:not(.no-default-styles) {
       color:#666;
    }
 }
+.table-wrapper {
+   max-width:  100%;
+   overflow-x: auto;
+   
+   >table {
+      width: max-content;
+      max-width: 150vw; /* or else cols word-wrap to the computed widths of headers' contents (width on TH can't enlarge) */
+   }
+}
 
 *:first-child{margin-top:0}
 *:last-child{margin-bottom:0}
